Import of DRTECH/ElasticSearch-SearchBuilder-0.02 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.02.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch-SearchBuilder
 
+0.02    2011-06-15
+        Minor doc and required module changes
+
 0.01    2011-06-15
         First alpha release, without test suite, for RFC purposes
 
