Import of DRTECH/ElasticSearch-SearchBuilder-0.03 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.03.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,8 +1,4 @@
-Revision history for ElasticSearch-SearchBuilder
+Revision history for ElasticSearch::SearchBuilder
+0.03    2011-06-30
 
-0.02    2011-06-15
-        Minor doc and required module changes
-
-0.01    2011-06-15
-        First alpha release, without test suite, for RFC purposes
-
+        First public release for ElasticSearch::SearchBuilder
