Import of DRTECH/ElasticSearch-SearchBuilder-0.05 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.05.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.05    2011-07-03
+        Added support for named filters
+
 0.04    2011-07-02
         Added the -all operator
         Changed the -not filter to work with ES < 0.17
