Import of DRTECH/ElasticSearch-SearchBuilder-0.06 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.06.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.06    2011-07-19
+        Added support for nested queries and filters
+
 0.05    2011-07-03
         Added support for named filters
 
