--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.07    2011-08-10
+        Added support for custom_filters_score query
+
 0.06    2011-07-19
         Added support for nested queries and filters
 
