--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.08    2011-08-12
+        Fixed Test::More dependency - thanks to AVAR
+
 0.07    2011-08-10
         Added support for custom_filters_score query
 
