Import of DRTECH/ElasticSearch-SearchBuilder-0.09 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.09
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.09.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.09    2011-08-28
+        Documented geo filters
+        Aliased geo_bbox to geo_bounding_box
+        Added "normalize" and "optimize_bbox" parameters to geo filters
+        Made -cache work with and|or filters
+        Added "rewrite" parameter to query_string, prefix and wildcard queries
+        Converted to Dist::Zilla
+
 0.08    2011-08-12
         Fixed Test::More dependency - thanks to AVAR
 
