--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
 
+0.12    2011-02-15
+        Fix version reported in POD
+
 0.11    2011-02-15
         Filter/queries now accept raw query DSL as a HASH-ref-ref
         Added -indices
