--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 Revision history for ElasticSearch::SearchBuilder
+0.13    2012-03-17
+        Added support for 'execution' param to -terms filter
 
-0.12    2011-02-15
+0.12    2012-02-15
         Fix version reported in POD
 
-0.11    2011-02-15
+0.11    2012-02-15
         Filter/queries now accept raw query DSL as a HASH-ref-ref
         Added -indices
         Added -cache_key
