--- a/README
+++ b/README
@@ -3,9 +3,9 @@ NAME
     ElasticSearch
 
 VERSION
-    Version 0.13
+    Version 0.14
 
-    Compatible with ElasticSearch version 0.19.0
+    Compatible with ElasticSearch version 0.19.7
 
 DESCRIPTION
     The Query DSL for ElasticSearch (see Query DSL
@@ -430,13 +430,15 @@ EQUALITY
         # Same as above but with extra parameters:
         { title => {
             text => {
-                query          => 'Perl is GREAT',
-                boost          => 2.0,
-                operator       => 'and',
-                analyzer       => 'default',
-                fuzziness      => 0.5,
-                max_expansions => 100,
-                prefix_length  => 2,
+                query                => 'Perl is GREAT',
+                boost                => 2.0,
+                operator             => 'and',
+                analyzer             => 'default',
+                fuzziness            => 0.5,
+                fuzzy_rewrite        => 'constant_score_default',
+                max_expansions       => 100,
+                minimum_should_match => 2,
+                prefix_length        => 2,
             }
         }}
 
@@ -615,6 +617,26 @@ MISSING OR NULL VALUES
         { -missing => 'foo'           }
         { foo      => undef           }
 
+    The "missing" filter also supports the "null_value" and "existence"
+    parameters:
+
+        {
+            foo     => {
+                missing => {
+                    null_value => 1,
+                    existence  => 1,
+                }
+            }
+        }
+
+    OR
+
+        { -missing => {
+            field      => 'foo',
+            null_value => 1,
+            existence  => 1,
+        }}
+
     See Missing Filter
     <http://www.elasticsearch.org/guide/reference/query-dsl/missing-filter.h
     tml> and Exists Filter
@@ -653,14 +675,19 @@ FULL TEXT SEARCH
                 allow_leading_wildcard       => 0,
                 lowercase_expanded_terms     => 1,
                 enable_position_increments   => 1,
-                fuzzy_prefix_length          => 2,
                 fuzzy_min_sim                => 0.5,
+                fuzzy_prefix_length          => 2,
+                fuzzy_rewrite                => 'constant_score_default',
+                fuzzy_max_expansions         => 1024,
+                lenient                      => 1,
                 phrase_slop                  => 10,
                 boost                        => 2,
                 analyze_wildcard             => 1,
                 auto_generate_phrase_queries => 0,
                 rewrite                      => 'constant_score_default',
                 minimum_number_should_match  => 3,
+                quote_analyzer               => 'standard',
+                quote_field_suffix           => '.unstemmed'
             }
         }}
 
@@ -675,8 +702,11 @@ FULL TEXT SEARCH
                 allow_leading_wildcard       => 0,
                 lowercase_expanded_terms     => 1,
                 enable_position_increments   => 1,
-                fuzzy_prefix_length          => 2,
                 fuzzy_min_sim                => 0.5,
+                fuzzy_prefix_length          => 2,
+                fuzzy_rewrite                => 'constant_score_default',
+                fuzzy_max_expansions         => 1024,
+                lenient                      => 1,
                 phrase_slop                  => 10,
                 boost                        => 2,
                 analyze_wildcard             => 1,
@@ -684,6 +714,8 @@ FULL TEXT SEARCH
                 use_dis_max                  => 1,
                 tie_breaker                  => 0.7,
                 minimum_number_should_match  => 3,
+                quote_analyzer               => 'standard',
+                quote_field_suffix           => '.unstemmed'
         }}
 
     See Query-string Query
@@ -895,7 +927,8 @@ WILDCARD AND FUZZY QUERIES
                 value           => 'fonbaz',
                 boost           => 2.0,
                 min_similarity  => 0.2,
-                max_expansions  => 10
+                max_expansions  => 10,
+                rewrite         => 'constant_score_default',
             }
         }}
 
@@ -1093,6 +1126,7 @@ SCRIPTING
             -custom_filters_score => {
                 query       => { foo => 'bar' },
                 score_mode  => 'first|max|total|avg|min|multiply', # default 'first'
+                max_boost   => 10,
                 filters     => [
                     {
                         filter => { tag => 'perl' },
