Import of DRTECH/ElasticSearch-SearchBuilder-0.15 from CPAN.
gitpan-cpan-distribution: ElasticSearch-SearchBuilder
gitpan-cpan-version:      0.15
gitpan-cpan-path:         DRTECH/ElasticSearch-SearchBuilder-0.15.tar.gz
gitpan-cpan-author:       DRTECH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for ElasticSearch::SearchBuilder
+0.15    2012-10-03
+        SearchBuilder was destroying the original hashrefs and arrayrefs for
+        certain clauses. Now makes copies
+
 0.14    2012-06-30
         Added 'null_value' and 'existence' to the -missing filter and op
         Added 'max_boost' to -custom_filters_score
